backup/xlpay/deploy_yaml/xyf-pay-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pay-web
  template:
    metadata:
      labels:
        app: pay-web
    spec:
      imagePullSecrets:
      - name: ${NAMESPACE}-ci-docker
      containers:
      - name: pay-web
        imagePullPolicy: Always
        image: docker.cetcxl.local/pay-web:${IMAGE_TAG}
---
apiVersion: v1
kind: Service
metadata:
  name: pay-web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 30004
  selector:
    app: pay-web
