backup/xlpay/deploy_yaml/xyf-xlpay-pay-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xlpay-pay-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xlpay-pay-user
  template:
    metadata:
      labels:
        app: xlpay-pay-user
    spec:
      imagePullSecrets:
      - name: ${NAMESPACE}-ci-docker
      containers:
      - name: xlpay-pay-user
        imagePullPolicy: Always
        image: docker.cetcxl.local/xlpay-pay-user:${IMAGE_TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: xlpay-pay-user
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    #nodePort: 30002
  selector:
    app: xlpay-pay-user
