backup/xlpay/deploy_yaml/xyf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xlpay
spec:
  rules:
  - host: xlpay.cetcxl.local
    http:
      paths:
      - path: /
        backend:
          serviceName: pay-web
          servicePort: 80
